--- a/config/loggers.ini
+++ b/config/loggers.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,status_logger,status_logger_2
+keys=root,status_logger,task_status_logger
 
 [handlers]
 keys=console_handler,file_handler_amend_status_logger,file_handler_task_status_logger
@@ -15,6 +15,11 @@ handlers=console_handler
 level=INFO
 handlers=console_handler,file_handler_amend_status_logger
 qualname=amend_status_logger
+
+[logger_status_logger]
+level=INFO
+handlers=console_handler,file_handler_amend_status_logger
+qualname=status_logger
 
 [logger_task_status_logger]
 level=INFO
