--- a/config/DB_Config.ini
+++ b/config/DB_Config.ini
@@ -1,7 +1,17 @@
+; [DATABASE]
+; MONGO_URI = mongodb+srv://processconfig:pc12345@processcluster.s5cyv.mongodb.net/?retryWrites=true&w=majority&appName=ProcessCluster
+; DB_NAME = process_config_db
+; MYSQL_HOST = 127.0.0.1
+; MYSQL_DATABASE = drs
+; MYSQL_USER = root
+; MYSQL_PASSWORD = 
+
+
+
 [DATABASE]
 MONGO_URI = mongodb+srv://processconfig:pc12345@processcluster.s5cyv.mongodb.net/?retryWrites=true&w=majority&appName=ProcessCluster
 DB_NAME = process_config_db
 MYSQL_HOST = 127.0.0.1
-MYSQL_DATABASE = drs
+MYSQL_DATABASE = process_config 
 MYSQL_USER = root
 MYSQL_PASSWORD = 
