--- a/config/loggers.ini
+++ b/config/loggers.ini
@@ -1,25 +1,20 @@
 [loggers]
-keys=root,status_logger,task_status_logger
+keys=root,incident_logger,task_status_logger
 
 [handlers]
-keys=console_handler,file_handler_amend_status_logger,file_handler_task_status_logger
+keys=console_handler,file_handler_incident_logger,file_handler_task_status_logger
 
 [formatters]
 keys=console_formatter,file_formatter
 
 [logger_root]
 level=INFO
-handlers=console_handler
+handlers=
 
-[logger_amend_status_logger]
+[logger_incident_logger]
 level=INFO
-handlers=console_handler,file_handler_amend_status_logger
-qualname=amend_status_logger
-
-[logger_status_logger]
-level=INFO
-handlers=console_handler,file_handler_amend_status_logger
-qualname=status_logger
+handlers=console_handler,file_handler_incident_logger
+qualname=incident_logger
 
 [logger_task_status_logger]
 level=INFO
@@ -31,15 +26,17 @@ class=StreamHandler
 formatter=console_formatter
 args=(sys.stdout,)
 
-[handler_file_handler_amend_status_logger]
-class=logging.handlers.RotatingFileHandler
+[handler_file_handler_incident_logger]
+class=handlers.RotatingFileHandler
 formatter=file_formatter
-args=('C:/Logger/amend_status_logger.log', 'a', 1000000, 100)
+; args=('E:\\Logger\\rptResumneDaily\\incident_logger.log','a',1000000,100)
+args=('/SLT_LOGGER/incident_logger.log',)
 
 [handler_file_handler_task_status_logger]
-class=logging.handlers.RotatingFileHandler
+class=handlers.RotatingFileHandler
 formatter=file_formatter
-args=('C:/Logger/task_status_logger.log', 'a', 1000000, 100)
+; args=('E:\\Logger\\rptResumneDaily\\task_status_logger.log','a',1000000,100)
+args=('/SLT_LOGGER/task_status_logger.log',)
 
 [formatter_console_formatter]
 format=%(asctime)s %(levelname)s | %(name)s | %(funcName)s:%(lineno)d | %(message)s
