--- a/config/filePathConfig.ini
+++ b/config/filePathConfig.ini
@@ -1,14 +1,9 @@
 [DatabaseConfigFile_path]
 # DB config.ini file path
-WIN_databaseConfig = C:\\Users\\MSii\\Downloads\\Process_Config\\Config\\databaseConfig.ini
+WIN_databaseConfig = D:\\SLT_DRS\\Git_DRS\\Process_Config\\config\\databaseConfig.ini
 LIN_databaseConfig = /home/MSii/Downloads/Process_Config/Config/databaseConfig.ini
 
 [LogConfigFile_path]
 # Logging.ini file path
-WIN_logConfig = C:\\Users\\MSii\\Downloads\\Process_Config\\Config\\logConfig.ini
+WIN_logConfig = D:\\SLT_DRS\\Git_DRS\\Process_Config\\config\\logConfig.ini
 LIN_logConfig = /home/MSii/Downloads/Process_Config/Config/logConfig.ini
-
-[filterRuleConfigFile_path]
-# Filter rule config.ini
-WIN_filterRuleConfig = C:\\Users\\MSii\\Downloads\\Process_Config\\Config\\filterRuleConfig.ini
-LIN_filterRuleConfig = /home/MSii/Downloads/Process_Config/Config/filterRuleConfig.ini
