--- a/config/filePathConfig.ini
+++ b/config/filePathConfig.ini
@@ -1,9 +1,9 @@
 [DatabaseConfigFile_path]
 # DB config.ini file path
-WIN_databaseConfig = C:\Users\Tharindu\OneDrive\Desktop\Process_Config\config\databaseConfig.ini
+WIN_databaseConfig = D:\SLT_DRS\Git_DRS\Process_Config\config\databaseConfig.ini
 LIN_databaseConfig = /home/MSii/Downloads/Process_Config/Config/databaseConfig.ini
 
 [LogConfigFile_path]
 # Logging.ini file path
-WIN_logConfig = C:\Users\Tharindu\OneDrive\Desktop\Process_Config\config\logConfig.ini
+WIN_logConfig = D:\SLT_DRS\Git_DRS\Process_Config\config\logConfig.ini
 LIN_logConfig = /home/MSii/Downloads/Process_Config/Config/logConfig.ini
