--- a/config/databaseConfig.ini
+++ b/config/databaseConfig.ini
@@ -4,3 +4,7 @@ MYSQL_HOST = 127.0.0.1
 MYSQL_DATABASE = drs 
 MYSQL_USER = root
 MYSQL_PASSWORD = 
+
+[MONGODB]
+MONGO_URL = mongodb://localhost:27017
+DATABASE_NAME = process_db
